# unlogic

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  conan_provider.cmake  conandata.yml  conanfile.txt  kickstart.sh  vcpkg.json
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml  docs-ci.yml  docs.yml  frontend-ci.yml  unlogic-ci.yml
benchmark/: GraphRenderer.benchmark.cpp  unlogic-graphic.benchmark.cpp
calculator/: CMakeLists.txt
calculator/resource/: stylesheet.qss
calculator/resource/shaders/: grid.vert
calculator/src/: CompilerController.h  CompilerWorker.cpp  CompilerWorker.h  Window.h  main.cpp
calculator/src/renderer/: VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanWindow.cpp  VulkanWindow.h
calculator/src/widgets/: Notebook.cpp  Notebook.h
docs/: index.html  package-lock.json
docs/src/: App.vue  main.ts
examples/: basic.ul
frontend/: package.json  vite.config.ts
frontend/src/: App.vue
provider/src/: GraphRenderer.h  TokenViewer.cpp  main.cpp
resource/shaders/: plot.frag  plot.vert
server/: CMakeLists.txt
src/: Compiler.cpp  Compiler.h  Error.h  Exception.cpp  Exception.h  Graph.cpp  Graph.h  GraphRenderer.cpp  GraphRenderer.h  GraphRenderer.test.h  Library.cpp  Library.h  MathFunction.cpp  MathFunction.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Program.cpp  Program.h  TokenViewer.cpp  TokenViewer.h  main.cpp
src/calculator/: CompilationStatus.h  CompilerController.cpp  CompilerController.h  CompilerWorker.cpp  CompilerWorker.h  Window.cpp  Window.h  main.cpp  main.h
src/calculator/renderer/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h  VulkanWindow.cpp  VulkanWindow.h
src/calculator/resource/shaders/: graph.vert  grid.frag  grid.vert  plot.frag  plot.vert
src/calculator/ui/: CanvasArea.h  GlAreaEx.h  SFMLWidget.h  SourceEditor.h  Window.cpp  Window.h
src/cli/: main.cpp
src/compiler/: Compiler.cpp  Compiler.h  Library.h  Program.h
src/compiler/std/: RuntimeLibrary.cpp  RuntimeLibrary.h  StandardLibrary.cpp  StandardLibrary.h
src/compiler/transformer/: IRGenerator.cpp  IRGenerator.h
src/compiler/transformer/debug/: DebugPrinter.h
src/graphic/: Camera.h  Color.cpp  Color.h  Drawable.cpp  Drawable.h  Graph.cpp  Graph.h  Math.h  Plot.cpp  Plot.h  RenderTarget.h  SFMLX.h  Scene.cpp  Scene.h  Shape.h  VertexBuffer.h  View.h
src/graphic/shape/: Plot.cpp  Plot.h  Rect.cpp  Rect.h  Shape.cpp  Shape.h
src/graphic/shapes/: Plot.cpp  Plot.h
src/graphic/ugl/: Canvas.cpp  Canvas.h  Drawable.cpp  Drawable.h  Vertex.h  VertexBuffer.h
src/graphic/ugl/shapes/: Line.cpp  Line.h  Plot.cpp  Plot.h
src/gui/: Widget.cpp  Widget.h
src/parser/: Lex.cpp  Lex.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Parser.y  ParserInterface.cpp  ParserInterface.h  Scanner.h  Scanner.l  Tokenizer.h  Unlogic.cpp  parser.y  parser.yy  scanner.h  scanner.ll
src/server/: main.cpp
src/std/: StandardLibrary.cpp  StandardLibrary.h
src/util/: io.cpp  io.h
test/: GraphRenderer.cpp  GraphRenderer.test.cpp  function.test.cpp  main.test.cpp  parser.test.cpp  unlogic-graphic.test.cpp  unlogic.test.cpp
unlogic/: CMakeLists.txt  conandata.yml
unlogic/src/: MathFunction.h  TokenViewer.h
unlogic/src/compiler/: Compiler.cpp  Compiler.h  Library.cpp  Library.h  Scope.h
unlogic/src/compiler/std/: RuntimeLibrary.h  StandardLibrary.cpp
unlogic/src/compiler/transformer/: IRGenerationContext.h  IRGenerator.cpp  IRGenerator.h
unlogic/src/compiler/transformer/debug/: DebugPrinter.cpp
unlogic/src/graphic/: Scene.cpp  Scene.h
unlogic/src/graphic/shape/: Shape.h
unlogic/src/parser/: Node.h  Parser.cpp  Parser.h
unlogic/src/util/: format.h  overload.h
unlogic/test/: unlogic.test.cpp
